v3.1.10 (2017-XX-XX)
--------------------

* fixed wrong sorting order in cluster, if an index was used to sort with many
shards.

* added --replication-factor, --number-of-shards and --wait-for-sync to arangobench

* turn on UTF-8 string validation for VelocyPack values received via VST connections

* fixed issue #2257

* added optional detail flag for db.<collection>.count()
  setting the flag to `true` will make the count operation returned the per-shard
  counts for the collection:

      db._create("test", { numberOfShards: 10 }); 
      for (i = 0; i < 1000; ++i) { 
        db.test.insert({value: i}); 
      }
      db.test.count(true);

      { 
	"s100058" : 99, 
	"s100057" : 103, 
	"s100056" : 100, 
	"s100050" : 94, 
	"s100055" : 90, 
	"s100054" : 122, 
	"s100051" : 109, 
	"s100059" : 99, 
	"s100053" : 95, 
	"s100052" : 89 
      }

* added optional memory limit for AQL queries:

      db._query("FOR i IN 1..100000 SORT i RETURN i", {}, { options: { memoryLimit: 100000 } });

  This option limits the default maximum amount of memory (in bytes) that a single 
  AQL query can use.
  When a single AQL query reaches the specified limit value, the query will be
  aborted with a *resource limit exceeded* exception. In a cluster, the memory
  accounting is done per shard, so the limit value is effectively a memory limit per
  query per shard.

  The global limit value can be overriden per query by setting the *memoryLimit* 
  option value for individual queries when running an AQL query. 

* added server startup option `--query.memory-limit`

* added convenience function to create vertex-centric indexes.
Usage: `db.collection.ensureVertexCentricIndex("label", {type: "hash", direction: "outbound"})`
That will create an index that can be used on OUTBOUND with filtering on the
edge attribute `label`.

* added option -D to define a configuration file environment key=value

* Foxx request URL suffix is no longer unescaped
